updated stying and fixed modal not showing problem

--- a/src/css/Admin/ChangePhoto.css
+++ b/src/css/Admin/ChangePhoto.css
@@ -1,4 +1,4 @@
-.modal {
+.change-photo-modal {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,8 +7,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-  z-index: 1000; /* Make sure it appears above other content */
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999 !important;
 }
 
 form {
